src/layouts/dashboard/market_overview/style.module.scss
$font-family: 'Neue Haas Grotesk Display Pro';

.MarketOverview__metaversegallery {
    display: flex;
    flex-direction: column;
    gap: 24px;

    @media (max-width: 1435px) {
        overflow-x: scroll;
    }

    .galleryHeaderBoard {
        display: flex;
        flex-direction: row;
        justify-content: space-between;

        &__headerTitle {
            font-family: $font-family;
            font-size: 20px;
            font-weight: 600;
            line-height: 24px;
            color: white;
        }

        &__viewmorebtn {
            display: flex;
            justify-content: center;
            align-items: center;
            width: 99px;
            height: 40px;
            border: 1px solid #2B2928;
            background-color: #191919;
            padding: 12px, 18px, 12px, 18px;
            border-radius: 32px;
            -webkit-border-radius: 32px;
            -moz-border-radius: 32px;
            -ms-border-radius: 32px;
            -o-border-radius: 32px;
            color: white;
            font-family: $font-family;
            font-size: 14px;
            font-weight: 500;
            line-height: 17px;
            text-align: center;

        }
    }

    .galleryContainer {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        min-width: 736px;

        &__galleryBox {
            width: 240px;
            height: 281px;
            border-radius: 16px;
            -webkit-border-radius: 16px;
            -moz-border-radius: 16px;
            -ms-border-radius: 16px;
            -o-border-radius: 16px;
            border: 1px solid #5C5C5C;
            background-color: #1E2121;
            padding: 10px 4px;
            display: flex;
            flex-direction: column;
            gap: 10px;

            .gallery {
                width: 100%;
                height: 200px;
                border-radius: 16px;
                -webkit-border-radius: 16px;
                -moz-border-radius: 16px;
                -ms-border-radius: 16px;
                -o-border-radius: 16px;
                border: 1px solid #B5B5B5;
            }

            .galleryDescContentBoard {
                display: flex;
                flex-direction: row;
                align-items: center;

                &__galleryDesc {
                    display: flex;
                    flex-direction: row;
                    align-items: center;
                    gap: 10px;
                }

                &__galleryContent {
                    display: flex;
                    flex-direction: row;
                    justify-content: flex-end;
                    width: 100%;
                    gap: 5px;
                }
            }
        }
    }
}

